Dynamic update of data on homepage and profile

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,7 +21,6 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
     <script src="scripts/index.js" defer type="module"></script>
   </head>
   <body id="page-index">
@@ -47,8 +46,8 @@
 
           <div class="info">
             <div class="total">
-              <strong>12</strong>
-              Projetos ao total
+              <strong><%= jobs.length %> </strong>
+              <%= jobs.length === 1 ? 'Projeto' : 'Projetos' %> ao total
             </div>
             <div class="in-progress">
               <strong>7</strong>
@@ -72,20 +71,26 @@
     <div class="container">
       <main class="animate-up delay-2">
         <h1 class="sr-only">Trabalhos</h1>
-
         <div class="cards">
-          <div class="card progress" data-id="1">
-            <div class="id column">1</div>
-            <div class="name column">Pizzaria Guloso</div>
+          <% jobs.forEach((job) => { %>
+
+          <div class="card <%= job.status %>" data-id="<%= job.id %> ">
+            <div class="id column"><%= job.id %></div>
+            <div class="name column"><%= job.name %></div>
             <div class="deadline column">
               <span>Prazo</span>
-              <p>3 dias para a entrega</p>
+              <p>
+                <% if(job.status === 'progress') { %> <%= job.remaining %> dias
+                para a entrega <% } else { %> Prazo encerrado <% } %>
+              </p>
             </div>
             <div class="amount column">
               <span>Valor</span>
-              <p>R$ 4500,00</p>
+              <p>R$ <%= job.budget.toFixed(2).replace('.', ',') %></p>
             </div>
-            <div class="status badge column">Em andamento</div>
+            <div class="status badge column">
+              <%= job.status === 'done' ? 'Encerrado' : 'Em andamento' %>
+            </div>
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
               <a href="/job/edit" class="button white edit" title="Editar Job">
@@ -96,9 +101,12 @@
               </button>
             </div>
           </div>
+
+          <% }) %>
+
           <!-- end card -->
 
-          <div class="card done" data-id="2">
+          <!-- <div class="card done" data-id="2">
             <div class="id column">2</div>
             <div class="name column">OneTwo Project</div>
             <div class="deadline column">
@@ -119,7 +127,7 @@
                 <img src="/images/trash-24.svg" alt="Excluir Job" />
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
         <!-- end cards -->
       </main>
