--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -47,7 +47,7 @@
                   type="number"
                   step="0.1"
                   id="daily-hours"
-                  name="daily-hours"
+                  name="dailyHours"
                 />
               </div>
 
@@ -56,7 +56,7 @@
                   >Estimativa de <br />
                   horas para esse Job?</label
                 >
-                <input type="number" id="total-hours" name="total-hours" />
+                <input type="number" id="total-hours" name="totalHours" />
               </div>
             </div>
           </fieldset>
