--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <script type="module" src="/imagesscripts/job-edit.js"></script>
+    <script type="module" src="/scripts/job-edit.js"></script>
     
   </head>
   <body id="page-job-edit">
@@ -31,7 +31,7 @@
     <%- include('parts/page-header', { title: 'Editar Job'}) %> 
 
     <div class="container flex animate-up delay-2">
-        <form id="form-job">
+        <form id="form-job" method="POST" action="/job/<%= job.id %> ">
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
@@ -42,7 +42,7 @@
                 type="text" 
                 id="name" 
                 name="name"
-                value="Pizzaria Guloso"
+                value="<%= job.name %> "
               />
             </div>
 
@@ -54,8 +54,8 @@
                   type="number"
                   step="0.1" 
                   id="daily-hours" 
-                  name="daily-hours"
-                  value="2"/>
+                  name="dailyHours"
+                  value="<%=job.dailyHours %>" />
               </div>
 
               <div class="input-wrapper">
@@ -64,8 +64,8 @@
                 <input 
                   type="number"
                   id="total-hours" 
-                  name="total-hours"
-                  value="40" />
+                  name="totalHours"
+                  value="<%=job.totalHours %>" />
               </div>
             </div>
           </fieldset>
@@ -75,7 +75,7 @@
       <aside class="card">
         <img src="/images/money-color.svg" alt="Imagem de Dinheiro">
         <p>
-          O valor do projeto ficou em <strong>R$ 4576,00</strong>
+          O valor do projeto ficou em <br /><strong>R$ <%= job.budget.toFixed(2).replace(".", ",") %> </strong>
         </p>
         <div class="button-group">
           <button 
@@ -100,11 +100,11 @@
 
     <div class="modal-wrapper">
       <div class="modal">
-        <img src="images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
+        <img src="/images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
         Ele será apagado para sempre.  
-        <p>
+        </p>
         <footer>
           <a 
             class="button gray" 
@@ -112,12 +112,13 @@
           <button
             class="button red"
             type="submit"
-            form="delete-job">Excluir Job</button>
+            form="delete-job">Excluir Job
+          </button>
         </footer>
       </div>
       <form 
-        method="post" 
-        action="/job/delete/{JOBID}" 
+        method="POST" 
+        action="/job/delete/<%= job.id %>" 
         id="delete-job"></form>
     </div>
     <!-- end modal-wrapper -->
